[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "acaciamc"
authors = [
    {name = "CBerJun"},
]
description = "Compiler of Acacia, a programming language for Minecraft BE."
readme = "README.md"
requires-python = ">=3.6.1"
keywords = ["acacia", "minecraft", "mcfunction"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Compilers",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/CBerJun/AcaciaMC"

[project.scripts]
acacia = "acaciamc.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "acaciamc.__version__"}

[tool.setuptools.package-data]
acaciamc = [
    "modules/*.py",
    "modules/*.aca",
    "lang/*.lang",
]
